<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <RelativeLayout
        android:id="@+id/topLayoutRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gradStart">

        <RelativeLayout
            android:id="@+id/profileLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding20"
            android:background="@drawable/circle">

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="@dimen/height120"
                android:layout_height="@dimen/height120"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/dim9"
                android:adjustViewBounds="true"
                android:background="@drawable/circle_border"
                android:padding="@dimen/dim3"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/lisa"
                android:contentDescription="@string/profile_image" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding15"
            android:fontFamily="@string/fontFamily"
            android:text="@string/fullName"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dim30"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dim_10"
            android:fontFamily="@string/fontFamily"
            android:text="@string/age"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize20" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/infoLayoutProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dimProfileInfoFragment"
        >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_10"
            android:layout_marginStart="@dimen/dim9"
            android:orientation="vertical"
            android:layout_margin="@dimen/dim30"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Occupation"
                    android:textColor="@color/headings"
                    />

                <TextView
                    android:id="@+id/tv_occupation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/occupation"
                    android:textSize="@dimen/dimText20"
                    android:textColor="@color/black"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim1"
                    android:layout_marginTop="@dimen/dim_10"
                    android:background="@color/grey">
                </View>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/headings"
                    />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="@dimen/dimText20"
                    android:textColor="@color/black"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim1"
                    android:layout_marginTop="@dimen/dim_10"
                    android:background="@color/grey">
                </View>

                <Button
                    android:id="@+id/buttonSecondView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/margin20"
                    android:text="@string/go_back_second"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>