<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">



    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding20"
        android:layout_marginStart="@dimen/dim30"
        android:orientation="vertical"
        android:layout_margin="@dimen/dim30"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="@color/headings"
                />

            <TextView
                android:id="@+id/tv_settingsPlaceHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="@dimen/dimText20"
                android:textColor="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim1"
                android:layout_marginTop="@dimen/dim_10"
                android:background="@color/grey">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/account_Type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_type_text"
                    android:textColor="@color/headings"
                    />
                <Switch
                    android:id="@+id/account_type_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim1"
                    android:layout_marginTop="@dimen/dim_10"
                    android:background="@color/grey"/>

                <TextView
                    android:id="@+id/match_reminder_setting_Id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_match_reminder"
                    android:textColor="@color/headings"
                    />

                <EditText
                    android:id="@+id/daily_match_reminder_ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/daily_match_reminder"
                    android:textSize="@dimen/dimText20"
                    android:textColor="@color/black"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim1"
                    android:layout_marginTop="@dimen/dim_10"
                    android:background="@color/grey"/>


                <TextView
                    android:id="@+id/max_distance_ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_distance_search_in_miles_info"
                    android:textColor="@color/headings"
                    />

                <Spinner
                    android:id="@+id/distance_spinner_Id"
                    android:layout_width="@dimen/height120"
                    android:layout_height="wrap_content"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim1"
                    android:layout_marginTop="@dimen/dim_10"
                    android:background="@color/grey"/>


                <TextView
                    android:id="@+id/age_range_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_range"
                    android:textColor="@color/headings"/>

                <Spinner
                    android:id="@+id/gender_spinner"
                    android:layout_width="@dimen/dime_width120"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim1"
                    android:layout_marginTop="@dimen/dim_10"
                    android:background="@color/grey"/>

                <TextView
                    android:id="@+id/gender_preference_ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_pref_info"
                    android:textColor="@color/headings"/>

                <Spinner
                    android:id="@+id/gender_spinner_ID"
                    android:layout_width="@dimen/dime_width120"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim1"
                    android:layout_marginTop="@dimen/dim_10"
                    android:background="@color/grey"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/buttonSecondView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin20"
                android:text="@string/go_back_second"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>